custom scrollbar fix

--- a/css/style.less
+++ b/css/style.less
@@ -405,6 +405,9 @@ color:@off_white !important;
 .slide_description{
 font-size:14px;
 color:@off_white;
+width:100%;
+height:100%;
+overflow:auto;
 }
 
 .interior_right .index_title{
